--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-18 Mon 16:01]
+#+CAPTION: Clock summary at [2019-03-18 Mon 16:05]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *50:13* |       |       | 100.0 |
+| *Total time*                                             | *50:14* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 50:13   |       |       | 100.0 |
-| Active                                                   |         | 50:13 |       | 100.0 |
+| Stories                                                  | 50:14   |       |       | 100.0 |
+| Active                                                   |         | 50:14 |       | 100.0 |
 | Edit release notes for previous sprint                   |         |       |  2:22 |   4.7 |
 | Sprint and product backlog grooming                      |         |       |  5:21 |  10.7 |
 | Create a video demo for the sprint's features            |         |       |  3:47 |   7.5 |
@@ -32,7 +32,7 @@
 | Empty directories should be deleted                      |         |       |  5:37 |  11.2 |
 | Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.3 |
 | Orchestration test is broken on Windows                  |         |       |  2:40 |   5.3 |
-| Code generation of tests for dogen models                |         |       | 16:10 |  32.2 |
+| Code generation of tests for dogen models                |         |       | 16:11 |  32.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -694,6 +694,7 @@ Notes:
 
 *** STARTED Code generation of tests for dogen models                 :story:
     :LOGBOOK:
+    CLOCK: [2019-03-18 Mon 16:04]--[2019-03-18 Mon 16:05] =>  0:01
     CLOCK: [2019-03-18 Mon 15:33]--[2019-03-18 Mon 16:01] =>  0:28
     CLOCK: [2019-03-18 Mon 15:30]--[2019-03-18 Mon 15:32] =>  0:02
     CLOCK: [2019-03-18 Mon 15:09]--[2019-03-18 Mon 15:29] =>  0:20
