--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,25 +14,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-18 Mon 16:18]
+#+CAPTION: Clock summary at [2019-03-18 Mon 16:33]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *50:26* |       |       | 100.0 |
+| *Total time*                                             | *50:40* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 50:26   |       |       | 100.0 |
-| Active                                                   |         | 50:26 |       | 100.0 |
+| Stories                                                  | 50:40   |       |       | 100.0 |
+| Active                                                   |         | 50:40 |       | 100.0 |
 | Edit release notes for previous sprint                   |         |       |  2:22 |   4.7 |
 | Sprint and product backlog grooming                      |         |       |  5:21 |  10.6 |
 | Create a video demo for the sprint's features            |         |       |  3:47 |   7.5 |
 | Make projects directory env optional                     |         |       |  0:10 |   0.3 |
 | Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.5 |
 | Add tests for tracing, reporting and diffing             |         |       |  5:46 |  11.4 |
-| Delete extra files appears broken at present             |         |       |  6:26 |  12.8 |
+| Delete extra files appears broken at present             |         |       |  6:26 |  12.7 |
 | Empty directories should be deleted                      |         |       |  5:37 |  11.1 |
 | Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.3 |
 | Orchestration test is broken on Windows                  |         |       |  2:40 |   5.3 |
-| Code generation of tests for dogen models                |         |       | 16:23 |  32.5 |
+| Code generation of tests for dogen models                |         |       | 16:37 |  32.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -694,6 +694,7 @@ Notes:
 
 *** STARTED Code generation of tests for dogen models                 :story:
     :LOGBOOK:
+    CLOCK: [2019-03-18 Mon 16:19]--[2019-03-18 Mon 16:33] =>  0:14
     CLOCK: [2019-03-18 Mon 16:06]--[2019-03-18 Mon 16:18] =>  0:12
     CLOCK: [2019-03-18 Mon 16:04]--[2019-03-18 Mon 16:05] =>  0:01
     CLOCK: [2019-03-18 Mon 15:33]--[2019-03-18 Mon 16:01] =>  0:28
@@ -780,6 +781,8 @@ Notes:
 - should be able to disable testing for a type by disabling the facet
   locally. Need to do this for composite/nested types.
 - handling of abstract base classes requires additional work.
+- two types in different namespaces with the same name result in
+  linking errors. Templating: text templates.
 
 Merged stories:
 
@@ -815,6 +818,27 @@ we do nothing.
 
 If a project has tests (see story above) we should automatically
 ignore the test regular expressions.
+
+*** Disabling facet after regeneration does not delete file           :story:
+
+Steps to reproduce:
+
+- enable tests for all types.
+- generate model.
+- disable tests for one type.
+- generate model.
+
+Expected that disabling tests for type would result in file
+deletion. Instead nothing happens. However, if one deletes the
+generated file for the type, then the next generation will correctly
+not generate code for the type.
+
+It seems there is some weird mismatch between enablement and lint
+removal: we are probably adding the file to the list of expected
+files, regardless of whether the facet is enabled or not. However,
+this is not always the case because we've proven that enabling and
+disabling a facet correctly results in the deletion of files. It must
+be something to do with how local enablement is handled.
 
 *** Line endings could cause rewrites                                 :story:
 
