--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,25 +14,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-18 Mon 16:36]
+#+CAPTION: Clock summary at [2019-03-18 Mon 17:17]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *50:42* |       |       | 100.0 |
+| *Total time*                                             | *51:21* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 50:42   |       |       | 100.0 |
-| Active                                                   |         | 50:42 |       | 100.0 |
-| Edit release notes for previous sprint                   |         |       |  2:22 |   4.7 |
-| Sprint and product backlog grooming                      |         |       |  5:21 |  10.6 |
-| Create a video demo for the sprint's features            |         |       |  3:47 |   7.5 |
+| Stories                                                  | 51:21   |       |       | 100.0 |
+| Active                                                   |         | 51:21 |       | 100.0 |
+| Edit release notes for previous sprint                   |         |       |  2:22 |   4.6 |
+| Sprint and product backlog grooming                      |         |       |  5:21 |  10.4 |
+| Create a video demo for the sprint's features            |         |       |  3:47 |   7.4 |
 | Make projects directory env optional                     |         |       |  0:10 |   0.3 |
 | Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.5 |
-| Add tests for tracing, reporting and diffing             |         |       |  5:46 |  11.4 |
-| Delete extra files appears broken at present             |         |       |  6:26 |  12.7 |
-| Empty directories should be deleted                      |         |       |  5:37 |  11.1 |
-| Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.3 |
-| Orchestration test is broken on Windows                  |         |       |  2:40 |   5.3 |
-| Code generation of tests for dogen models                |         |       | 16:39 |  32.8 |
+| Add tests for tracing, reporting and diffing             |         |       |  5:46 |  11.2 |
+| Delete extra files appears broken at present             |         |       |  6:26 |  12.5 |
+| Empty directories should be deleted                      |         |       |  5:37 |  10.9 |
+| Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.2 |
+| Orchestration test is broken on Windows                  |         |       |  2:40 |   5.2 |
+| Code generation of tests for dogen models                |         |       | 17:18 |  33.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -694,6 +694,7 @@ Notes:
 
 *** STARTED Code generation of tests for dogen models                 :story:
     :LOGBOOK:
+    CLOCK: [2019-03-18 Mon 17:16]--[2019-03-18 Mon 17:17] =>  0:01
     CLOCK: [2019-03-18 Mon 16:37]--[2019-03-18 Mon 17:15] =>  0:38
     CLOCK: [2019-03-18 Mon 16:34]--[2019-03-18 Mon 16:36] =>  0:02
     CLOCK: [2019-03-18 Mon 16:19]--[2019-03-18 Mon 16:33] =>  0:14
