--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,25 +14,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-18 Mon 17:27]
+#+CAPTION: Clock summary at [2019-03-18 Mon 19:00]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *51:30* |       |       | 100.0 |
+| *Total time*                                             | *51:42* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 51:30   |       |       | 100.0 |
-| Active                                                   |         | 51:30 |       | 100.0 |
+| Stories                                                  | 51:42   |       |       | 100.0 |
+| Active                                                   |         | 51:42 |       | 100.0 |
 | Edit release notes for previous sprint                   |         |       |  2:22 |   4.6 |
-| Sprint and product backlog grooming                      |         |       |  5:21 |  10.4 |
+| Sprint and product backlog grooming                      |         |       |  5:21 |  10.3 |
 | Create a video demo for the sprint's features            |         |       |  3:47 |   7.3 |
 | Make projects directory env optional                     |         |       |  0:10 |   0.3 |
 | Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.5 |
 | Add tests for tracing, reporting and diffing             |         |       |  5:46 |  11.2 |
-| Delete extra files appears broken at present             |         |       |  6:26 |  12.5 |
+| Delete extra files appears broken at present             |         |       |  6:26 |  12.4 |
 | Empty directories should be deleted                      |         |       |  5:37 |  10.9 |
 | Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.2 |
 | Orchestration test is broken on Windows                  |         |       |  2:40 |   5.2 |
-| Code generation of tests for dogen models                |         |       | 17:27 |  33.9 |
+| Code generation of tests for dogen models                |         |       | 17:39 |  34.1 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -694,6 +694,7 @@ Notes:
 
 *** STARTED Code generation of tests for dogen models                 :story:
     :LOGBOOK:
+    CLOCK: [2019-03-18 Mon 18:48]--[2019-03-18 Mon 19:00] =>  0:12
     CLOCK: [2019-03-18 Mon 17:18]--[2019-03-18 Mon 17:27] =>  0:09
     CLOCK: [2019-03-18 Mon 17:16]--[2019-03-18 Mon 17:17] =>  0:01
     CLOCK: [2019-03-18 Mon 16:37]--[2019-03-18 Mon 17:15] =>  0:38
@@ -787,6 +788,9 @@ Notes:
 - handling of abstract base classes requires additional work.
 - two types in different namespaces with the same name result in
   linking errors. Templating: text templates.
+- at present we are not including internal namespaces in the CTest
+  execution. We should add them to the test suite name. If we do this
+  in the template we will solve two problems in one go (line above).
 
 Merged stories:
 
