--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,25 +14,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-19 Tue 07:01]
+#+CAPTION: Clock summary at [2019-03-19 Tue 08:03]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *52:41* |       |       | 100.0 |
+| *Total time*                                             | *53:09* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 52:41   |       |       | 100.0 |
-| Active                                                   |         | 52:41 |       | 100.0 |
+| Stories                                                  | 53:09   |       |       | 100.0 |
+| Active                                                   |         | 53:09 |       | 100.0 |
 | Edit release notes for previous sprint                   |         |       |  2:22 |   4.5 |
-| Sprint and product backlog grooming                      |         |       |  6:20 |  12.0 |
-| Create a video demo for the sprint's features            |         |       |  3:47 |   7.2 |
+| Sprint and product backlog grooming                      |         |       |  6:43 |  12.6 |
+| Create a video demo for the sprint's features            |         |       |  3:47 |   7.1 |
 | Make projects directory env optional                     |         |       |  0:10 |   0.3 |
 | Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.4 |
-| Add tests for tracing, reporting and diffing             |         |       |  5:46 |  10.9 |
-| Delete extra files appears broken at present             |         |       |  6:26 |  12.2 |
-| Empty directories should be deleted                      |         |       |  5:37 |  10.7 |
+| Add tests for tracing, reporting and diffing             |         |       |  5:46 |  10.8 |
+| Delete extra files appears broken at present             |         |       |  6:26 |  12.1 |
+| Empty directories should be deleted                      |         |       |  5:37 |  10.6 |
 | Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.2 |
-| Orchestration test is broken on Windows                  |         |       |  2:40 |   5.1 |
-| Code generation of tests for dogen models                |         |       | 17:39 |  33.5 |
+| Orchestration test is broken on Windows                  |         |       |  2:40 |   5.0 |
+| Code generation of tests for dogen models                |         |       | 17:44 |  33.4 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -231,6 +231,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-03-18 Tue 19:02]--[2019-03-18 Tue 19:25] =>  0:23
     CLOCK: [2019-03-19 Tue 06:02]--[2019-03-19 Tue 07:01] =>  0:59
     CLOCK: [2019-03-18 Mon 10:36]--[2019-03-18 Mon 10:44] =>  0:08
     CLOCK: [2019-03-16 Sat 21:12]--[2019-03-16 Sat 21:30] =>  0:18
@@ -695,6 +696,7 @@ Notes:
 
 *** STARTED Code generation of tests for dogen models                 :story:
     :LOGBOOK:
+    CLOCK: [2019-03-19 Tue 07:57]--[2019-03-19 Tue 08:02] =>  0:05
     CLOCK: [2019-03-18 Mon 18:48]--[2019-03-18 Mon 19:00] =>  0:12
     CLOCK: [2019-03-18 Mon 17:18]--[2019-03-18 Mon 17:27] =>  0:09
     CLOCK: [2019-03-18 Mon 17:16]--[2019-03-18 Mon 17:17] =>  0:01
