--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,25 +14,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-19 Tue 08:15]
+#+CAPTION: Clock summary at [2019-03-19 Tue 08:41]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *53:21* |       |       | 100.0 |
+| *Total time*                                             | *53:46* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 53:21   |       |       | 100.0 |
-| Active                                                   |         | 53:21 |       | 100.0 |
+| Stories                                                  | 53:46   |       |       | 100.0 |
+| Active                                                   |         | 53:46 |       | 100.0 |
 | Edit release notes for previous sprint                   |         |       |  2:22 |   4.4 |
-| Sprint and product backlog grooming                      |         |       |  6:43 |  12.6 |
-| Create a video demo for the sprint's features            |         |       |  3:47 |   7.1 |
+| Sprint and product backlog grooming                      |         |       |  6:43 |  12.5 |
+| Create a video demo for the sprint's features            |         |       |  3:47 |   7.0 |
 | Make projects directory env optional                     |         |       |  0:10 |   0.3 |
 | Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.4 |
-| Add tests for tracing, reporting and diffing             |         |       |  5:46 |  10.8 |
-| Delete extra files appears broken at present             |         |       |  6:26 |  12.1 |
-| Empty directories should be deleted                      |         |       |  5:37 |  10.5 |
-| Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.2 |
+| Add tests for tracing, reporting and diffing             |         |       |  5:46 |  10.7 |
+| Delete extra files appears broken at present             |         |       |  6:26 |  12.0 |
+| Empty directories should be deleted                      |         |       |  5:37 |  10.4 |
+| Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.1 |
 | Orchestration test is broken on Windows                  |         |       |  2:40 |   5.0 |
-| Code generation of tests for dogen models                |         |       | 17:56 |  33.6 |
+| Code generation of tests for dogen models                |         |       | 18:21 |  34.1 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -696,6 +696,7 @@ Notes:
 
 *** STARTED Code generation of tests for dogen models                 :story:
     :LOGBOOK:
+    CLOCK: [2019-03-19 Tue 08:16]--[2019-03-19 Tue 08:41] =>  0:25
     CLOCK: [2019-03-19 Tue 08:03]--[2019-03-19 Tue 08:15] =>  0:12
     CLOCK: [2019-03-19 Tue 07:57]--[2019-03-19 Tue 08:02] =>  0:05
     CLOCK: [2019-03-18 Mon 18:48]--[2019-03-18 Mon 19:00] =>  0:12
@@ -782,13 +783,16 @@ Notes:
   manually. Write story to fix it properly.
 - rename =class_implementation_formatter=. This is more like
   =class_test_suite=.
-- drop source prefix in =source_cmakelists=.
-- need a way to add include of logging and json validator.
+- need a way to add include of logging and json validator. This is
+  actually really complicated because we do not know what the name for
+  logging is (its model dependent). For now we will just not make use
+  of logging. We can also use property tree for JSON validation.
 - if test data is disabled we should let the users know and output
   fake tests. Same with no properties.
-- no tests for hashing and enumerations.
 - should be able to disable testing for a type by disabling the facet
   locally. Need to do this for composite/nested types.
+- drop source prefix in =source_cmakelists=.
+- no tests for hashing and enumerations.
 - handling of abstract base classes requires additional work.
 - two types in different namespaces with the same name result in
   linking errors. Templating: text templates.
