--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,25 +14,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-19 Tue 08:41]
+#+CAPTION: Clock summary at [2019-03-19 Tue 09:03]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *53:46* |       |       | 100.0 |
+| *Total time*                                             | *54:07* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 53:46   |       |       | 100.0 |
-| Active                                                   |         | 53:46 |       | 100.0 |
+| Stories                                                  | 54:07   |       |       | 100.0 |
+| Active                                                   |         | 54:07 |       | 100.0 |
 | Edit release notes for previous sprint                   |         |       |  2:22 |   4.4 |
-| Sprint and product backlog grooming                      |         |       |  6:43 |  12.5 |
+| Sprint and product backlog grooming                      |         |       |  6:43 |  12.4 |
 | Create a video demo for the sprint's features            |         |       |  3:47 |   7.0 |
 | Make projects directory env optional                     |         |       |  0:10 |   0.3 |
 | Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.4 |
 | Add tests for tracing, reporting and diffing             |         |       |  5:46 |  10.7 |
-| Delete extra files appears broken at present             |         |       |  6:26 |  12.0 |
+| Delete extra files appears broken at present             |         |       |  6:26 |  11.9 |
 | Empty directories should be deleted                      |         |       |  5:37 |  10.4 |
 | Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.1 |
-| Orchestration test is broken on Windows                  |         |       |  2:40 |   5.0 |
-| Code generation of tests for dogen models                |         |       | 18:21 |  34.1 |
+| Orchestration test is broken on Windows                  |         |       |  2:40 |   4.9 |
+| Code generation of tests for dogen models                |         |       | 18:42 |  34.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -696,6 +696,7 @@ Notes:
 
 *** STARTED Code generation of tests for dogen models                 :story:
     :LOGBOOK:
+    CLOCK: [2019-03-19 Tue 08:42]--[2019-03-19 Tue 09:03] =>  0:21
     CLOCK: [2019-03-19 Tue 08:16]--[2019-03-19 Tue 08:41] =>  0:25
     CLOCK: [2019-03-19 Tue 08:03]--[2019-03-19 Tue 08:15] =>  0:12
     CLOCK: [2019-03-19 Tue 07:57]--[2019-03-19 Tue 08:02] =>  0:05
