--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,25 +14,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-19 Tue 09:27]
+#+CAPTION: Clock summary at [2019-03-19 Tue 09:53]
 | <75>                                                     |         |       |       |       |
 | Headline                                                 | Time    |       |       |     % |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                             | *54:29* |       |       | 100.0 |
+| *Total time*                                             | *54:54* |       |       | 100.0 |
 |----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                  | 54:29   |       |       | 100.0 |
-| Active                                                   |         | 54:29 |       | 100.0 |
+| Stories                                                  | 54:54   |       |       | 100.0 |
+| Active                                                   |         | 54:54 |       | 100.0 |
 | Edit release notes for previous sprint                   |         |       |  2:22 |   4.3 |
-| Sprint and product backlog grooming                      |         |       |  6:43 |  12.3 |
+| Sprint and product backlog grooming                      |         |       |  6:43 |  12.2 |
 | Create a video demo for the sprint's features            |         |       |  3:47 |   6.9 |
 | Make projects directory env optional                     |         |       |  0:10 |   0.3 |
 | Clang-cl builds are failing due to memory leak reporting |         |       |  0:45 |   1.4 |
-| Add tests for tracing, reporting and diffing             |         |       |  5:46 |  10.6 |
-| Delete extra files appears broken at present             |         |       |  6:26 |  11.8 |
-| Empty directories should be deleted                      |         |       |  5:37 |  10.3 |
+| Add tests for tracing, reporting and diffing             |         |       |  5:46 |  10.5 |
+| Delete extra files appears broken at present             |         |       |  6:26 |  11.7 |
+| Empty directories should be deleted                      |         |       |  5:37 |  10.2 |
 | Changes to stitch templates are not reported correctly   |         |       |  1:09 |   2.1 |
 | Orchestration test is broken on Windows                  |         |       |  2:40 |   4.9 |
-| Code generation of tests for dogen models                |         |       | 19:04 |  35.0 |
+| Code generation of tests for dogen models                |         |       | 19:29 |  35.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -696,6 +696,7 @@ Notes:
 
 *** STARTED Code generation of tests for dogen models                 :story:
     :LOGBOOK:
+    CLOCK: [2019-03-19 Tue 09:28]--[2019-03-19 Tue 09:53] =>  0:25
     CLOCK: [2019-03-19 Tue 09:14]--[2019-03-19 Tue 09:27] =>  0:13
     CLOCK: [2019-03-19 Tue 09:04]--[2019-03-19 Tue 09:13] =>  0:09
     CLOCK: [2019-03-19 Tue 08:42]--[2019-03-19 Tue 09:03] =>  0:21
